--- a/app/views/ngselect2.html
+++ b/app/views/ngselect2.html
@@ -2,7 +2,7 @@
 <div class="form-group">
     <input id="sel" type="hidden"
            style="min-width:80%"
-           ng-model="ngselect2.query"
+           ng-model="ngselect2.artistModel"
            ui-select2="ngselect2.select2options"/>
 </div>
 {{ngselect2.query}}
